tests/baselines/reference/strictNullChecksPragma4.errors.txt
tests/cases/conformance/pragma/strictNullChecks/file1.ts(8,14): error TS2322: Type 'undefined' is not assignable to type 'number'.
tests/cases/conformance/pragma/strictNullChecks/file1.ts(10,1): error TS2322: Type 'B' is not assignable to type 'A'.
tests/cases/conformance/pragma/strictNullChecks/file1.ts(11,1): error TS2322: Type 'A' is not assignable to type 'B'.
tests/cases/conformance/pragma/strictNullChecks/file1.ts(15,20): error TS2322: Type 'undefined' is not assignable to type 'number'.
tests/cases/conformance/pragma/strictNullChecks/file1.ts(18,1): error TS2322: Type 'A' is not assignable to type 'B'.
tests/cases/conformance/pragma/strictNullChecks/file1.ts(27,1): error TS2322: Type 'A' is not assignable to type 'B'.
tests/cases/conformance/pragma/strictNullChecks/file1.ts(29,1): error TS2322: Type 'A' is not assignable to type 'B'.
tests/cases/conformance/pragma/strictNullChecks/file1.ts(30,1): error TS2322: Type 'B' is not assignable to type 'A'.
tests/cases/conformance/pragma/strictNullChecks/file2.ts(12,1): error TS2322: Type 'A' is not assignable to type 'B'.
  Types of property 'member' are incompatible.
    Type 'number' is not assignable to type 'undefined'.
tests/cases/conformance/pragma/strictNullChecks/file2.ts(18,1): error TS2322: Type 'B' is not assignable to type 'A'.
  Types of property 'member' are incompatible.
    Type 'undefined' is not assignable to type 'number'.
tests/cases/conformance/pragma/strictNullChecks/file2.ts(19,1): error TS2322: Type 'A' is not assignable to type 'B'.
  Types of property 'member' are incompatible.
    Type 'number' is not assignable to type 'undefined'.
tests/cases/conformance/pragma/strictNullChecks/file2.ts(27,1): error TS2322: Type 'B' is not assignable to type 'A'.
  Types of property 'member' are incompatible.
    Type 'undefined' is not assignable to type 'number'.
tests/cases/conformance/pragma/strictNullChecks/file2.ts(28,1): error TS2322: Type 'A' is not assignable to type 'B'.
  Types of property 'member' are incompatible.
    Type 'number' is not assignable to type 'undefined'.
tests/cases/conformance/pragma/strictNullChecks/file2.ts(30,1): error TS2322: Type 'A' is not assignable to type 'B'.
  Types of property 'member' are incompatible.
    Type 'number' is not assignable to type 'undefined'.
tests/cases/conformance/pragma/strictNullChecks/file3.ts(4,14): error TS2322: Type 'undefined' is not assignable to type 'number'.
tests/cases/conformance/pragma/strictNullChecks/file3.ts(6,16): error TS2322: Type 'undefined' is not assignable to type 'number'.
tests/cases/conformance/pragma/strictNullChecks/file3.ts(9,1): error TS2322: Type 'B' is not assignable to type 'A'.
tests/cases/conformance/pragma/strictNullChecks/file3.ts(10,1): error TS2322: Type 'A' is not assignable to type 'B'.
tests/cases/conformance/pragma/strictNullChecks/file3.ts(13,1): error TS2322: Type 'A' is not assignable to type 'B'.
tests/cases/conformance/pragma/strictNullChecks/file3.ts(22,1): error TS2322: Type 'A' is not assignable to type 'B'.
tests/cases/conformance/pragma/strictNullChecks/file3.ts(24,1): error TS2322: Type 'A' is not assignable to type 'B'.
tests/cases/conformance/pragma/strictNullChecks/file3.ts(25,1): error TS2322: Type 'B' is not assignable to type 'A'.
tests/cases/conformance/pragma/strictNullChecks/file4.ts(10,1): error TS2322: Type 'B' is not assignable to type 'A'.
tests/cases/conformance/pragma/strictNullChecks/file4.ts(11,1): error TS2322: Type 'A' is not assignable to type 'B'.
tests/cases/conformance/pragma/strictNullChecks/file4.ts(14,1): error TS2322: Type 'A' is not assignable to type 'B'.
tests/cases/conformance/pragma/strictNullChecks/file4.ts(23,1): error TS2322: Type 'A' is not assignable to type 'B'.
tests/cases/conformance/pragma/strictNullChecks/file4.ts(25,1): error TS2322: Type 'A' is not assignable to type 'B'.
tests/cases/conformance/pragma/strictNullChecks/file4.ts(26,1): error TS2322: Type 'B' is not assignable to type 'A'.


==== tests/cases/conformance/pragma/strictNullChecks/file1.ts (8 errors) ====
    export interface A {
        member: number;
    }
    export interface B {
        member: undefined;
    }
    
    let a: A = { member: undefined };
                 ~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'number'.
!!! related TS6500 tests/cases/conformance/pragma/strictNullChecks/file1.ts:2:5: The expected type comes from property 'member' which is declared here on type 'A'
    let b: B = { member: undefined };
    a = b;
    ~
!!! error TS2322: Type 'B' is not assignable to type 'A'.
    b = a;
    ~
!!! error TS2322: Type 'A' is not assignable to type 'B'.
    
    import {A as OtherA, B as OtherB} from "./file2";
    
    let a2: OtherA = { member: undefined };
                       ~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'number'.
!!! related TS6500 /.src/tests/cases/conformance/pragma/strictNullChecks/file2.ts:3:5: The expected type comes from property 'member' which is declared here on type 'A'
    declare var b2: OtherB;
    a2 = b2;
    b2 = a2;
    ~~
!!! error TS2322: Type 'A' is not assignable to type 'B'.
    
    a = a2;
    a2 = a;
    
    b = b2;
    b2 = b;
    
    a = b2;
    b2 = a;
    ~~
!!! error TS2322: Type 'A' is not assignable to type 'B'.
    
    b = a2;
    ~
!!! error TS2322: Type 'A' is not assignable to type 'B'.
    a2 = b;
    ~~
!!! error TS2322: Type 'B' is not assignable to type 'A'.
    
==== tests/cases/conformance/pragma/strictNullChecks/file2.ts (6 errors) ====
    // @ts-strictNullChecks false
    export interface A {
        member: number;
    }
    export interface B {
        member: undefined;
    }
    
    let a: A = { member: undefined };
    let b: B = { member: undefined };
    a = b;
    b = a; // Historic behavior is that most things aren't assignable to `undefined` when it doesn't evaporate, even outside `strict` mode - making it more like a special `never` than an `any`.
    ~
!!! error TS2322: Type 'A' is not assignable to type 'B'.
!!! error TS2322:   Types of property 'member' are incompatible.
!!! error TS2322:     Type 'number' is not assignable to type 'undefined'.
    
    import {A as OtherA, B as OtherB} from "./file1";
    
    let a2: OtherA = { member: undefined };
    declare var b2: OtherB;
    a2 = b2;
    ~~
!!! error TS2322: Type 'B' is not assignable to type 'A'.
!!! error TS2322:   Types of property 'member' are incompatible.
!!! error TS2322:     Type 'undefined' is not assignable to type 'number'.
    b2 = a2;
    ~~
!!! error TS2322: Type 'A' is not assignable to type 'B'.
!!! error TS2322:   Types of property 'member' are incompatible.
!!! error TS2322:     Type 'number' is not assignable to type 'undefined'.
    
    a = a2;
    a2 = a;
    
    b = b2;
    b2 = b;
    
    a = b2;
    ~
!!! error TS2322: Type 'B' is not assignable to type 'A'.
!!! error TS2322:   Types of property 'member' are incompatible.
!!! error TS2322:     Type 'undefined' is not assignable to type 'number'.
    b2 = a;
    ~~
!!! error TS2322: Type 'A' is not assignable to type 'B'.
!!! error TS2322:   Types of property 'member' are incompatible.
!!! error TS2322:     Type 'number' is not assignable to type 'undefined'.
    
    b = a2;
    ~
!!! error TS2322: Type 'A' is not assignable to type 'B'.
!!! error TS2322:   Types of property 'member' are incompatible.
!!! error TS2322:     Type 'number' is not assignable to type 'undefined'.
    a2 = b;
    
==== tests/cases/conformance/pragma/strictNullChecks/file3.ts (8 errors) ====
    import {A, B} from "./file1";
    import {A as A2, B as B2} from "./file2";
    
    let a: A = { member: undefined };
                 ~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'number'.
!!! related TS6500 tests/cases/conformance/pragma/strictNullChecks/file1.ts:2:5: The expected type comes from property 'member' which is declared here on type 'A'
    let b: B = { member: undefined };
    let a2: A2 = { member: undefined };
                   ~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'number'.
!!! related TS6500 /.src/tests/cases/conformance/pragma/strictNullChecks/file2.ts:3:5: The expected type comes from property 'member' which is declared here on type 'A'
    let b2: B2 = { member: undefined };
    
    a = b;
    ~
!!! error TS2322: Type 'B' is not assignable to type 'A'.
    b = a;
    ~
!!! error TS2322: Type 'A' is not assignable to type 'B'.
    
    a2 = b2;
    b2 = a2;
    ~~
!!! error TS2322: Type 'A' is not assignable to type 'B'.
    
    a = a2;
    a2 = a;
    
    b = b2;
    b2 = b;
    
    a = b2;
    b2 = a;
    ~~
!!! error TS2322: Type 'A' is not assignable to type 'B'.
    
    b = a2;
    ~
!!! error TS2322: Type 'A' is not assignable to type 'B'.
    a2 = b;
    ~~
!!! error TS2322: Type 'B' is not assignable to type 'A'.
    
==== tests/cases/conformance/pragma/strictNullChecks/file4.ts (6 errors) ====
    // @ts-strictNullChecks false
    import {A, B} from "./file1";
    import {A as A2, B as B2} from "./file2";
    
    let a: A = { member: undefined };
    let b: B = { member: undefined };
    let a2: A2 = { member: undefined };
    let b2: B2 = { member: undefined };
    
    a = b;
    ~
!!! error TS2322: Type 'B' is not assignable to type 'A'.
    b = a;
    ~
!!! error TS2322: Type 'A' is not assignable to type 'B'.
    
    a2 = b2;
    b2 = a2;
    ~~
!!! error TS2322: Type 'A' is not assignable to type 'B'.
    
    a = a2;
    a2 = a;
    
    b = b2;
    b2 = b;
    
    a = b2;
    b2 = a;
    ~~
!!! error TS2322: Type 'A' is not assignable to type 'B'.
    
    b = a2;
    ~
!!! error TS2322: Type 'A' is not assignable to type 'B'.
    a2 = b;
    ~~
!!! error TS2322: Type 'B' is not assignable to type 'A'.